--- a/Raissa_Edwige__intro_to_wordvectors.ipynb
+++ b/Raissa_Edwige__intro_to_wordvectors.ipynb
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 1,
       "metadata": {
         "id": "tOhvyQAZJ69S"
       },
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 2,
       "metadata": {
         "id": "nTNqsaelJ69T"
       },
@@ -63,13 +63,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 3,
       "metadata": {
         "id": "taMk19LGJ69T",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5eeaceb3-ffeb-44c3-f597-659efdc91702"
+        "outputId": "56d481b8-8e15-46e0-f642-b13e6f602ccf"
       },
       "outputs": [
         {
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 4,
       "metadata": {
         "id": "AgwjARbPJ69U"
       },
@@ -133,13 +133,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 5,
       "metadata": {
         "id": "jvw8VgfEJ69U",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a56e61f2-388c-43d0-fa55-a09a6b422154"
+        "outputId": "da41b428-0ec0-4984-80e7-22f8bfec5da4"
       },
       "outputs": [
         {
@@ -207,18 +207,18 @@
       "metadata": {
         "id": "r7SnDfXYAg8-"
       },
-      "execution_count": 71,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 7,
       "metadata": {
         "id": "rQe1x41FJ69V",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5df95617-d9ad-41e7-faea-a9702299c6e3"
+        "outputId": "cdbec910-131f-4a04-adb8-a61904a5288f"
       },
       "outputs": [
         {
@@ -248,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 8,
       "metadata": {
         "id": "ur89-A3gJ69W"
       },
@@ -286,13 +286,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 9,
       "metadata": {
         "id": "U9fpWfPeJ69W",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "46f6c2df-a5db-44ee-f9be-f67119971337"
+        "outputId": "04cff74d-9f07-46e5-b173-320c9c2d48f0"
       },
       "outputs": [
         {
@@ -332,7 +332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 10,
       "metadata": {
         "id": "ZpnmINKPJ69W"
       },
@@ -372,13 +372,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 11,
       "metadata": {
         "id": "igjB3Oh9J69W",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "26e2253c-19d5-42cc-e9f1-825ca1ea3ac5"
+        "outputId": "3627fbd5-65b4-4edc-cc37-9932638d2171"
       },
       "outputs": [
         {
@@ -408,13 +408,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 12,
       "metadata": {
         "id": "y6oQJfIjJ69X",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "038ee5e1-8d60-47bc-b124-03575e71da49"
+        "outputId": "a7aa5bcc-7ea0-4a79-eb47-7e1d514ccf52"
       },
       "outputs": [
         {
@@ -439,7 +439,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 13,
       "metadata": {
         "id": "znssQCmnJ69X"
       },
@@ -484,46 +484,17 @@
     {
       "cell_type": "code",
       "source": [
-        "association_strength('home', male, female, word_vectors)"
+        "#association_strength('home', male, female, word_vectors)"
       ],
       "metadata": {
-        "id": "KyKS4nB-SRFG",
-        "outputId": "d4c313e2-ed0e-4184-9904-a2e7a7b7df46",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "KyKS4nB-SRFG"
       },
-      "execution_count": 149,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "john\n",
-            "paul\n",
-            "mike\n",
-            "kevin\n",
-            "steve\n",
-            "greg\n",
-            "jeff\n",
-            "bill\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "-0.027292590003828443"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 149
-        }
-      ]
+      "execution_count": 16,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 154,
+      "execution_count": 17,
       "metadata": {
         "id": "p2VwEwh6J69X"
       },
@@ -586,9 +557,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eCDz6vkuRG9t",
-        "outputId": "a0ba4256-5c47-4461-fe6c-ce6cc2f94046"
+        "outputId": "8654d632-963c-4c13-a062-6b1ef9a97eb5"
       },
-      "execution_count": 144,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -598,19 +569,19 @@
             ]
           },
           "metadata": {},
-          "execution_count": 144
+          "execution_count": 18
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 155,
+      "execution_count": 19,
       "metadata": {
         "id": "DvrGi8N0J69X",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ac77e6c2-47f9-4878-f6fb-1260993e4123"
+        "outputId": "d2af05f9-8ab7-45d3-8e93-288893f8a030"
       },
       "outputs": [
         {
@@ -791,7 +762,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
+      "execution_count": 20,
       "metadata": {
         "id": "CAlLXD-lJ69X"
       },
@@ -815,13 +786,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": 21,
       "metadata": {
         "id": "e26HaLQNJ69X",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7684c0f9-437c-4575-9373-6d41574ba74e"
+        "outputId": "e3b97c18-70ed-4e45-9318-fa7354bf819b"
       },
       "outputs": [
         {
@@ -841,7 +812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": 22,
       "metadata": {
         "id": "rZsur36PJ69X"
       },
@@ -863,7 +834,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 156,
+      "execution_count": 23,
       "metadata": {
         "id": "rQgOsZKLJ69Y"
       },
@@ -897,20 +868,33 @@
         "mapping = align(word_vectors_en, word_vectors_fr, lexicon)"
       ],
       "metadata": {
-        "id": "ftvc3xunauwU"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ftvc3xunauwU",
+        "outputId": "f5d6ab55-a017-410c-902e-149486840f4f"
       },
-      "execution_count": 157,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:19: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+            "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
+      "execution_count": 25,
       "metadata": {
         "id": "yHojrHbjJ69Y",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f5a4c8b6-54e3-482c-8c17-f4a54eea4893"
+        "outputId": "312c3dc7-8697-44cb-b01a-17bc0e55bf73"
       },
       "outputs": [
         {
@@ -933,7 +917,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 159
+          "execution_count": 25
         }
       ],
       "source": [
@@ -951,7 +935,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "1PR242y5J69Y"
       },
@@ -962,31 +946,42 @@
         "    Parameters:\n",
         "    word(string): an English word\n",
         "    word_vectors_en(dict: string -> np.array): English word vectors\n",
-        "    word_vectors_fr(dict: string -> np.array): French word vectors\n",
+        "    word_vectors_en(dict: string -> np.array): French word vectors\n",
         "    mapping(np.array): the mapping from English to French vectors\n",
         "    \n",
         "    Returns\n",
         "    A string containing the translation of the English word\n",
         "    '''\n",
-        "    ## FILL CODE\n",
-        "    word_vects = word_vectors_en[word]\n",
-        "    np.dot(word_vects , mapping)\n",
         "    \n",
-        "      \n",
-        "      \n",
+        "    ## FILL CODE\n",
+        "    en_vector = word_vectors[word]\n",
+        "    fr_vec = np.dot(en_vector, mapping)\n",
+        "    fr_word = nearest_neighbor(fr_vec, word_vectors_fr)\n",
         "\n",
-        "\n",
-        "\n",
-        "    return None"
+        "    return fr_word"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
-        "id": "nC99m4GiJ69Y"
+        "id": "nC99m4GiJ69Y",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c5df95b0-c2e5-49d1-8952-3096a79abd87"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "monde\n",
+            "machine\n",
+            "apprentissage\n"
+          ]
+        }
+      ],
       "source": [
         "print(translate(\"world\", word_vectors_en, word_vectors_fr, mapping))\n",
         "print(translate(\"machine\", word_vectors_en, word_vectors_fr, mapping))\n",
@@ -1004,7 +999,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "id": "J8MtBmBEJ69Y"
       },
@@ -1021,20 +1016,45 @@
         "    Returns\n",
         "    Accuracy(float): the accuracy on the validation lexicon\n",
         "    '''\n",
-        "    acc, n = 0.0, 0\n",
-        "    \n",
+        "    acc= 0.0, \n",
+        "    accuracy = 0.0\n",
         "    ## FILL CODE\n",
+        "    for i in valid:\n",
+        "      trans = translate(i[0], word_vectors_en,word_vectors_fr, mapping)\n",
         "\n",
-        "    return acc"
+        "      if trans == i[1]:\n",
+        "        accuracy += 1\n",
+        "    acc = accuracy / len(valid)\n",
+        "\n",
+        "    return str(acc * 100) + \"%\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
-        "id": "8RpEvlwVJ69Y"
+        "id": "8RpEvlwVJ69Y",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "8747dd40-937b-4c93-862f-7493063180c9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'64.0%'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ],
       "source": [
         "evaluate(valid, word_vectors_en, word_vectors_fr, mapping)"
       ]
